--- a/revtwo/package.json
+++ b/revtwo/package.json
@@ -2,6 +2,7 @@
   "name": "revtwo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rajakumar8153.github.io/revtwo",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.0",
@@ -24,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build && cp build/index.html build/404.html",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
